; ModuleID = '/home/carl/AnghaBench/xLua/build/luajit-2.1.0b3/src/host/extr_minilua.c_rehash.c'
source_filename = "/home/carl/AnghaBench/xLua/build/luajit-2.1.0b3/src/host/extr_minilua.c_rehash.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i32*, i32*, i32*)* @rehash to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @rehash(i32* %0, i32* %1, i32* %2) #0 {
  %4 = alloca i32*, align 8
  %5 = alloca i32*, align 8
  %6 = alloca i32*, align 8
  %7 = alloca i32, align 4
  %8 = alloca i32, align 4
  %9 = alloca [31 x i32], align 16
  %10 = alloca i32, align 4
  %11 = alloca i32, align 4
  store i32* %0, i32** %4, align 8
  store i32* %1, i32** %5, align 8
  store i32* %2, i32** %6, align 8
  store i32 0, i32* %10, align 4
  br label %12

12:                                               ; preds = %19, %3
  %13 = load i32, i32* %10, align 4
  %14 = icmp sle i32 %13, 30
  br i1 %14, label %15, label %22

15:                                               ; preds = %12
  %16 = load i32, i32* %10, align 4
  %17 = sext i32 %16 to i64
  %18 = getelementptr inbounds [31 x i32], [31 x i32]* %9, i64 0, i64 %17
  store i32 0, i32* %18, align 4
  br label %19

19:                                               ; preds = %15
  %20 = load i32, i32* %10, align 4
  %21 = add nsw i32 %20, 1
  store i32 %21, i32* %10, align 4
  br label %12

22:                                               ; preds = %12
  %23 = load i32*, i32** %5, align 8
  %24 = getelementptr inbounds [31 x i32], [31 x i32]* %9, i64 0, i64 0
  %25 = call i32 @numusearray(i32* %23, i32* %24)
  store i32 %25, i32* %7, align 4
  %26 = load i32, i32* %7, align 4
  store i32 %26, i32* %11, align 4
  %27 = load i32*, i32** %5, align 8
  %28 = getelementptr inbounds [31 x i32], [31 x i32]* %9, i64 0, i64 0
  %29 = call i64 @numusehash(i32* %27, i32* %28, i32* %7)
  %30 = load i32, i32* %11, align 4
  %31 = sext i32 %30 to i64
  %32 = add nsw i64 %31, %29
  %33 = trunc i64 %32 to i32
  store i32 %33, i32* %11, align 4
  %34 = load i32*, i32** %6, align 8
  %35 = getelementptr inbounds [31 x i32], [31 x i32]* %9, i64 0, i64 0
  %36 = call i64 @countint(i32* %34, i32* %35)
  %37 = load i32, i32* %7, align 4
  %38 = sext i32 %37 to i64
  %39 = add nsw i64 %38, %36
  %40 = trunc i64 %39 to i32
  store i32 %40, i32* %7, align 4
  %41 = load i32, i32* %11, align 4
  %42 = add nsw i32 %41, 1
  store i32 %42, i32* %11, align 4
  %43 = getelementptr inbounds [31 x i32], [31 x i32]* %9, i64 0, i64 0
  %44 = call i32 @computesizes(i32* %43, i32* %7)
  store i32 %44, i32* %8, align 4
  %45 = load i32*, i32** %4, align 8
  %46 = load i32*, i32** %5, align 8
  %47 = load i32, i32* %7, align 4
  %48 = load i32, i32* %11, align 4
  %49 = load i32, i32* %8, align 4
  %50 = sub nsw i32 %48, %49
  %51 = call i32 @resize(i32* %45, i32* %46, i32 %47, i32 %50)
  ret void
}

declare dso_local i32 @numusearray(i32*, i32*) #1

declare dso_local i64 @numusehash(i32*, i32*, i32*) #1

declare dso_local i64 @countint(i32*, i32*) #1

declare dso_local i32 @computesizes(i32*, i32*) #1

declare dso_local i32 @resize(i32*, i32*, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
